# elktracer

./: .rustfmt.toml  Cargo.toml  imgui.ini
elkengine_core/: Cargo.toml
elkengine_core/src/: lib.rs
elkengine_core/src/application/: imgui.rs  internal.rs  layer.rs  mod.rs  opengl.rs
elktracer_benchmarks/: Cargo.toml
elktracer_benchmarks/benches/: render_image.rs
elktracer_cli/: Cargo.toml
elktracer_cli/examples/: demo.json  test.json
elktracer_cli/src/: error.rs  main.rs  model.rs
elktracer_core/: Cargo.toml
elktracer_core/src/: camera.rs  color.rs  lib.rs  logging.rs  profiler.rs  random.rs  ray_hit.rs  raytracer.rs  raytracer_context.rs  utils.rs
elktracer_core/src/material/: lambert.rs  metal.rs  mod.rs  transparent.rs
elktracer_core/src/math/: interval.rs  mod.rs  ray.rs  vector3.rs
elktracer_core/src/object/: sphere.rs
elktracer_core/src/scene/: camera.rs  mod.rs  sphere.rs  tree.rs
elktracer_editor/: Cargo.toml
elktracer_editor/assets/icons/: app.xcf
elktracer_editor/src/: application.rs  application_handler.rs  error.rs  main.rs  model.rs  render_tasks.rs
elktracer_editor/src/ui/: camera.rs  material.rs  mod.rs  preview.rs  rendering.rs  scene_objects.rs
elktracer_editor/src/ui/windows/: diagnostics.rs  mod.rs  render_options.rs
elktracer_editor/src/vulkan/: context.rs  mod.rs  renderer.rs  swap_chain.rs
elktracer_json/: Cargo.toml
elktracer_json/src/: lib.rs  model.rs
