[workspace]
resolver = "2"

members = [
    "elktracer_benchmarks",
    "elktracer_cli",
    "elktracer_core",
    "elktracer_editor",
    "elktracer_json",
]

[workspace.dependencies]
# Logging
log = "0.4.27"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
