[package]
name = "elkengine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Logging
log = { workspace = true }
# Window & Rendering
winit = { version = "0.30.9" }
glutin = { version = "0.32.2" }
glutin-winit = { version = "0.5.0" }
imgui = { version = "0.12.0", git = "https://github.com/imgui-rs/imgui-rs", features = [
    "docking",
] }
imgui-glow-renderer = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-glow-renderer.git" }
imgui-winit-support = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-winit-support" }
raw-window-handle = { version = "0.6.2" }
