[package]
name = "elktracer_core"
description = "Core library for elktracer"
repository = "https://github.com/3LK3/elktracer"
version = "0.1.0"
edition = "2024"

[lib]
# crate-type = ["rlib", "cdylib"]
proc-macro = false
path = "src/lib.rs"

[dependencies]
image = "0.25.5"
fastrand = "2.3.0"
# wasm
# wasm-bindgen = { version = "0.2.100" }
# console_error_panic_hook = "0.1.7"
# serde = { version = "1.0", features = ["derive"] }
# serde-wasm-bindgen = "0.6.5"
# Logging
env_logger = "0.11.6"
log = { workspace = true }
