[package]
name = "elktracer_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
elktracer_core = { path = "../elktracer_core" }
bevy = { version = "0.16", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy_egui = { version = "0.34.1" }
bevy-inspector-egui = { version = "0.31.0" }
egui_dock = { version = "0.16.0" }
