[package]
name = "elktracer_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
elktracer_core = { path = "../elktracer_core" }
elktracer_json = { path = "../elktracer_json" }
bevy = { version = "0.16", features = ["bevy_dev_tools"] }
bevy_egui = { version = "0.34.1" }
bevy-inspector-egui = { version = "0.31.0" }
egui_dock = { version = "0.16.0" }
egui_flex = { version = "0.3.0" }
winit = { version = "0.30.10" }
rfd = "0.15.3"

[dev-dependencies]
wasm-server-runner = "1.0.0"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"