[package]
name = "elktracer_json"
version = "0.1.0"
edition = "2024"

[lib]
# crate-type = ["rlib", "cdylib"]
proc-macro = false
path = "src/lib.rs"

[dependencies]
elktracer_core = { path = "../elktracer_core" }
log = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
